# fastapi-todoapp1

./: .env  pyproject.toml
fastapi_todoapp1/: auth.py  db.py  main.py  models.py  setting.py
fastapi_todoapp1/router/: user.py
